--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ p{
 	margin: 0;
 }
 
+
 .fixed-container{
 	max-width: 1000px;
 	min-width: 320px;
@@ -24,6 +25,7 @@ p{
 .header-line{
 	display: flex;
 	align-items: center;
+
 }
 
 .nav{
@@ -62,6 +64,15 @@ p{
 	color: #FC6589;
 	padding: 15px 35px;
 	font-size: 14px;
+
+}
+
+.telegram a{
+	text-decoration: none;	
+}
+
+.telegram a:visited{
+	color: #FC6589;
 }
 
 .txt-information{
@@ -91,6 +102,12 @@ p{
 		font-size: 14px;
 
 	}
+	.more-information a:visited, .about-me a:visited{
+	color: white;
+	}
+	.more-information a, .about-me a{
+		text-decoration: none;
+	}
 
 .img-information{
 	width: 500px;
@@ -118,6 +135,9 @@ p{
 .skills{
 	margin-top: 100px;
 	margin-bottom: 100px;
+}
+.skills-information-tablet{
+	display: none;
 }
 
 .skills-title, .my-portfolio-title{
@@ -282,37 +302,464 @@ p{
 
 
 @media screen and (max-width: 1200px) {
-	.fixed-container {
+	.container {
 		width: 1140px;
 	}
 }
 
 @media screen and (max-width: 1199px) {
-	.fixed-container {
-		width: 950px;
+		
+	.fixed-container{
+		max-width: 720px;
+		padding: 0 20px;
+		margin: 0 auto;
+		position: relative;
 	}
-	
+		.nav{
+		display: none;
+	}
+	.nav-mobile{
+		display: block;
+	}
+	.header{
+		flex-direction: column;
+		height: 311px;
+	}
+	.telegram button{
+		padding: 7px 26px;
+	}
+	.tel a{
+		margin-left: 180px;
+	}
+	.bg-img img{
+		width: 300px;
+	}
+	.my-image{
+		position: relative;
+	    z-index: 2;
+	    left: 505px;
+	    top: 11px;
+	}
+	.bg-img {
+	    position: absolute;
+	    top: 79px;
+	    right: -30px;
+	    z-index: 1;
+   }
+	.my-image img{
+		width: 200px;	
+	}
+	.img-information{
+		width: 200px;
+	}
+	.name{
+		font-size: 24px;
+		padding-bottom: 23px;
+		padding-top: 30px;
+	}
+	.job-name{
+		font-size: 12px;
+		padding-bottom: 33px;
+		display: block;
+		color: #8B95AE;
+	}
+	.more-information button{
+		padding: 21px 43px;
+	}
+	.txt-information{
+		width: auto;
+		padding: 40px;
+		position: absolute;
+		top: 40px;
+	}
+	.skills{
+		margin-top: 70px;
+	}
+	.skills-title{
+		font-size: 24px;
+		margin-bottom: 70px;
+	}
+	.skills-information-tablet{
+		display: block;
+	}
+	.skills-information{
+		display: none;
+	}
+	.two1-tablet{
+		width: 720px;
+		font-size: 18px;
+		display: flex;
+		justify-content: space-between;
+	}
+	.two2-tablet{
+		width: 720px;
+		font-size: 18px;
+		display: flex;
+		justify-content: space-between;
+		padding-bottom: 40px;
+	}
+	.first-skill{
+		width: 350px;
+	}
+	.second-skill, .third-skill,.fourth-skill{
+		width: 350px;
+	}
+	 .first-skill, .second-skill, .third-skill {
+	    margin-right: 0px;
+	    margin-bottom: 55px;
+	}
+	.img1-skill img, .img2-skill img, .img3-skill img, .img4-skill img {
+	    height: 60px;
+	    padding-bottom: 21px;
+	}
+	.portfolio-slider{
+		justify-content: space-around;
+		font-size: 14px;
+	}
+	.my-portfolio-title {
+	    padding-top: 25px;
+	    font-size: 24px;
+	    margin-bottom: 50px;
+	}
+	.portfolio-3{
+		display: none;
+	}
+	.portfolio-1 img,.portfolio-2 img{
+		width: 220px;
+	}
+	.portfolio-1-img,.portfolio-2-img{
+		padding-bottom: 20px;
+	}
+	.portfolio-slider{
+		margin-bottom: 50px;
+	}
+	.my-portfolio{
+		padding-bottom: 50px;
+	}
+	.left-footer{
+		margin-right: 86px;
+		font-size: 14px;
+	}
+	.center-footer{
+		font-size: 14px;
+	}
+	.right-footer{
+		font-size: 14px;
+	}
+	.button-footer button{
+	padding: 15px 23px;
+	}
+	.icons-footer {
+    display: flex;
+    padding-top: 11px;
+	}
 }
 
 @media screen and (max-width: 991px) {
-	.fixed-container {
+	.fixed-container{
+		max-width: 720px;
+		padding: 0 20px;
+		margin: 0 auto;
+		position: relative;
+	}
+	.nav{
+		display: none;
+	}
+	.nav-mobile{
+		display: block;
+	}
+	.header{
+		flex-direction: column;
+		height: 311px;
+	}
+	.telegram button{
+		padding: 7px 26px;
+	}
+	.tel a{
+		margin-left: 180px;
+	}
+	.bg-img img{
+		width: 300px;
+	}
+	.my-image{
+		position: relative;
+	    z-index: 2;
+	    left: 505px;
+	    top: 11px;
+	}
+	.bg-img {
+	    position: absolute;
+	    top: 79px;
+	    right: -30px;
+	    z-index: 1;
+   }
+	.my-image img{
+		width: 200px;
+	}
+	.img-information{
+		width: 200px;
+	}
+	.name{
+		font-size: 24px;
+		padding-bottom: 23px;
+		padding-top: 30px;
+	}
+	.job-name{
+		font-size: 12px;
+		padding-bottom: 33px;
+		display: block;
+		color: #8B95AE;
+	}
+	.more-information button{
+		padding: 21px 43px;
+
+	}
+	.txt-information{
+		width: auto;
+		padding: 40px;
+		position: absolute;
+		top: 40px;
+	}
+	.skills{
+		margin-top: 70px;
+	}
+	.skills-title{
+		font-size: 24px;
+		margin-bottom: 70px;
+	}
+	.skills-information-tablet{
+		display: block;
+	}
+	.skills-information{
+		display: none;
+	}
+	.two1-tablet{
 		width: 720px;
+		font-size: 18px;
+		display: flex;
+		justify-content: space-between;
+	}
+	.two2-tablet{
+		width: 720px;
+		font-size: 18px;
+		display: flex;
+		justify-content: space-between;
+		padding-bottom: 40px;
+	}
+	.first-skill{
+		width: 350px;
+	}
+	.second-skill, .third-skill,.fourth-skill{
+		width: 350px;
+	}
+	 .first-skill, .second-skill, .third-skill {
+	    margin-right: 0px;
+	    margin-bottom: 55px;
+	}
+	.img1-skill img, .img2-skill img, .img3-skill img, .img4-skill img {
+	    height: 60px;
+	    padding-bottom: 21px;
+	}
+	.portfolio-slider{
+		justify-content: space-around;
+		font-size: 14px;
+	}
+	.my-portfolio-title {
+	    padding-top: 25px;
+	    font-size: 24px;
+	    margin-bottom: 50px;
+	}
+	.portfolio-3{
+		display: none;
+	}
+	.portfolio-1 img,.portfolio-2 img{
+		width: 220px;
+	}
+	.portfolio-1-img,.portfolio-2-img{
+		padding-bottom: 20px;
+	}
+	.portfolio-slider{
+		margin-bottom: 50px;
+	}
+	.my-portfolio{
+		padding-bottom: 50px;
+	}
+	.left-footer{
+		margin-right: 86px;
+		font-size: 14px;
+	}
+	.center-footer{
+		font-size: 14px;
+	}
+	.right-footer{
+		font-size: 14px;
+	}
+	.button-footer button{
+		padding: 15px 23px;
+	}
+	.icons-footer {
+	    display: flex;
+	    padding-top: 11px;
 	}
 }
 
 @media screen and (max-width: 767px) {
-	.fixed-container {
-		width: 540px;
+	.fixed-container{
+		max-width: 576px;
+		padding: 0 20px;
+		margin: 0 auto;
+		position: relative;
+	}
+	.nav{
+		display: none;
+	}
+	.nav-mobile{
+		display: block;
+	}
+	.header{
+		flex-direction: column;
+		height: 311px;
+	}
+	.telegram button{
+		padding: 7px 26px;
+	}
+	.tel a{
+		margin-left: 180px;
+	}
+	.bg-img img{
+		width: 300px;
+	}
+	.my-image{
+		position: relative;
+	    z-index: 2;
+	    left: 358px;
+	    top: 11px;
+	}
+	.bg-img {
+	    position: absolute;
+	    top: 79px;
+	    right: -30px;
+	    z-index: 1;
+   }
+	.my-image img{
+		width: 200px;
 	}
 	
+	.img-information{
+		width: 200px;
+	}
+	.name{
+		font-size: 24px;
+		padding-bottom: 23px;
+		padding-top: 30px;
+	}
+	.job-name{
+		font-size: 12px;
+		padding-bottom: 33px;
+		display: block;
+		color: #8B95AE;
+	}
+	.more-information button{
+		padding: 21px 43px;
+	}
+	
+	.txt-information{
+		width: auto;
+		padding: 40px;
+		position: absolute;
+		top: 40px;
+	}
+	.skills{
+		margin-top: 70px;
+	}
+	.skills-title{
+		font-size: 24px;
+		margin-bottom: 70px;
+	}
+	.skills-information-tablet{
+		display: block;
+	}
+	.skills-information{
+		display: none;
+	}
+	.two1-tablet{
+		width: 576px;
+		font-size: 14px;
+		display: flex;
+		justify-content: space-between;
+	}
+	.two2-tablet{
+		width: 576px;
+		font-size: 14px;
+		display: flex;
+		justify-content: space-between;
+		padding-bottom: 40px;
+	}
+	.first-skill{
+		width: 276px;
+	}
+	.second-skill, .third-skill,.fourth-skill{
+		width: 276px;
+	}
+	 .first-skill, .second-skill, .third-skill {
+	    margin-right: 0px;
+	    margin-bottom: 55px;
+	}
+	.img1-skill img, .img2-skill img, .img3-skill img, .img4-skill img {
+	    height: 60px;
+	    padding-bottom: 21px;
+	}
+	.portfolio-slider{
+		justify-content: space-around;
+		font-size: 14px;
+	}
+	.my-portfolio-title {
+	    padding-top: 25px;
+	    font-size: 24px;
+	    margin-bottom: 50px;
+	}
+	.portfolio-3{
+		display: none;
+	}
+	.portfolio-1 img,.portfolio-2 img{
+		width: 220px;
+	}
+	.portfolio-1-img,.portfolio-2-img{
+		padding-bottom: 20px;
+	}
+	.portfolio-slider{
+		margin-bottom: 50px;
+	}
+	.my-portfolio{
+		padding-bottom: 50px;
+	}
+	.left-footer{
+		margin-right: 20px;
+		font-size: 14px;
+	}
+	.center-footer{
+		font-size: 14px;
+	}
+	.right-footer{
+		font-size: 14px;
+
+	}
+	.button-footer button{
+		padding: 15px 23px;
+	}
+	.icons-footer {
+	    display: flex;
+	    padding-top: 11px;
+	}
 }
+
 
 @media screen and (max-width: 575px) {
 	.fixed-container{
 		max-width: 320px;
 		padding: 0 20px;
 		margin: 0 auto;
-	position: relative;
+		position: relative;
 	}
 	.nav, .telegram button{
 		display: none;
@@ -337,18 +784,18 @@ p{
 		position: absolute;
 		display: flex;
 		align-items: center;
-		}
+	}
 	.my-image img{
-			width: 200px;
-		}
+		width: 200px;
+	}
 	.my-image{
 		position: absolute;
 		top: 84px;
 		left: 85px;
 	}
-		.img-information{
-			width: 200px;
-		}
+	.img-information{
+		width: 200px;
+	}
 	.name{
 		font-size: 30px;
 		padding-bottom: 13px;
@@ -366,40 +813,43 @@ p{
 	.txt-information{
 		width: auto;
 		text-align: center;
-		    padding: 40px;
-
-		 position: absolute;
-		 top: 300px;
+		padding: 40px;
+		position: absolute;
+		top: 300px;
 	}
 	.skills-title{
 		font-size: 30px;
 	}
+	.two1-tablet, .two2-tablet{
+		width: 320px;
+	}
 	.img1-skill img, .img2-skill img, .img3-skill img, .img4-skill img {
-    height: 60px;
-    padding-bottom: 21px;
+	    height: 60px;
+	    padding-bottom: 21px;
 	}
 	.skills-information {
 		display: block;
 		margin-bottom: 57px;
 	}
-
     .first-skill, .second-skill, .third-skill {
-    margin-right: 0px;
-    margin-bottom: 55px;
+	    margin-right: 0px;
+	    margin-bottom: 55px;
 	}
-
 	.skills{
 		margin-top: 25px;
 		margin-bottom: 25px;
+	}
+	.skills-information-tablet{
+		display: none;
 	}
 	.skills-title{
 		margin-bottom: 46px;
 	}
 	.my-portfolio-title {
-    padding-top: 25px;
-    font-size: 30px;
-    margin-bottom: 50px;
-}
+	    padding-top: 25px;
+	    font-size: 30px;
+	    margin-bottom: 50px;
+	}
 	.portfolio-2,.portfolio-3{
 		display: none;
 	}
@@ -416,7 +866,7 @@ p{
 		font-size: 28px;
 	}
 	.about-me-text {
-    font-size: 16px;
+    	font-size: 16px;
 	}
 	.left-footer{
 		margin-right: 0;
@@ -427,8 +877,7 @@ p{
 		height: 400px;
 	}
 	.right-footer {
-    float: left;
-    padding-top: 30px;
+	    float: left;
+	    padding-top: 30px;
 	}
-
 }
